--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,7 +5,7 @@
     justify-items: center;
     max-width: 50rem;
     height: 90vh;
-    margin-inline: auto;
+    align-self: center;
 }
 
 #greeting {
