--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -2,8 +2,8 @@
     display: grid;
     grid-template-rows: max-content 1fr;
     row-gap: 1em;
+    width: 100%;
     justify-items: center;
-    max-width: 50rem;
     height: 90vh;
     align-self: center;
 }
@@ -161,7 +161,11 @@
     padding: .5em;
 }
 
-@media screen and (min-width: 756px) {
+@media screen and (min-width: 810px) {
+    #index-main {
+        max-width: 60rem;
+        justify-self: center;
+    }
     #chat-container {
         grid-template-rows: unset;
         grid-template-columns: 1fr 1fr;
