--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -1,15 +1,17 @@
 #login-main {
-    display: grid;
-    row-gap: 2em;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     margin-top: 4em;
-    align-self: start;
 }
 
 #login-main>h1 {
+    text-align: center;
     font-size: 2.5rem;
 }
 
 #login-main>button {
     font-size: 1.5rem;
+
 }
